--- a/index.css
+++ b/index.css
@@ -55,3 +55,32 @@ font-style: normal;
 font-weight: 400;
 line-height: 150%; /* 30px */
 }
+@media only screen and (max-width: 834px) {
+    h1 {
+        font-size: 32px;
+    }
+    .card {
+        width: 458.121px;
+        height: 261.204px;
+        flex-shrink: 0;
+        border-radius: 17.375px;
+        background: #FFF;
+        box-shadow: 0.57917px 0.57917px 11.58333px 0px rgba(0, 0, 0, 0.25);
+        padding: 73px;
+    }
+    .card p{
+        font-size: 12px;
+    }
+    .card2-2-1 {
+        font-size: 17px;
+    }
+    .card2-1{
+        width: 110.042px;
+        height: 97.879px;
+    }
+    .fb {
+        width: 18.533px;
+        height: 17.954px;
+        
+    }
+}
