--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+img{
+    width: 100%;
+}
 .card {
     width: 791px;
 height: 451px;
@@ -7,16 +10,17 @@ background: #FFF;
 box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.25);
 padding: 46px;
 }
+.card2-2 {
+    width: 190px;
+height: 169px;
+}
 .card2 {
     display: flex;
 
 }
 .card2-1 {
-font-family: Roboto;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 150%; 
+    width: 190px;
+    height: 169px;
 }
 
 .card2-2-1 {
@@ -62,25 +66,34 @@ line-height: 150%; /* 30px */
     .card {
         width: 458.121px;
         height: 261.204px;
-        flex-shrink: 0;
         border-radius: 17.375px;
         background: #FFF;
         box-shadow: 0.57917px 0.57917px 11.58333px 0px rgba(0, 0, 0, 0.25);
-        padding: 73px;
+        padding: 26px;
     }
     .card p{
         font-size: 12px;
     }
     .card2-2-1 {
         font-size: 17px;
+        padding-left: 17px;
+        padding-bottom: 0;
+        margin-bottom: 0;
+        height: auto;
+
     }
     .card2-1{
         width: 110.042px;
         height: 97.879px;
+        
     }
     .fb {
         width: 18.533px;
         height: 17.954px;
+        padding-top: 16px;
+        padding-left: 16px;
         
     }
 }
+
+
