Added adaptive layout

--- a/gulnar.css
+++ b/gulnar.css
@@ -1,26 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;500;600;700;800;900&family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,400;1,500;1,700;1,900&display=swap');
 * {
     font-family: 'Roboto', sans-serif;
+    margin: 0%;
+    padding: 0%;
+    max-width: 1439px;
 }
 h2{
     font-family: 'Roboto Slab', serif;
 }
-.format h2{
-    color: black;
-    font-family: Roboto Slab;
-    font-size: 55px;
-    font-weight: 700;
-    line-height: 101.385%; 
-    padding-left: 121px;
-}
+
 .format-cards{
     display: flex;
 }
 .format-card{
-    width: 223px;
+width: 223px;
 height: 39px;
-margin-right: 100px;
-padding-left: 122px;
+margin-right: 195px;
+padding-left: 121px;
 }
 .format-card h3{
     color: #1E4681;
@@ -41,6 +37,15 @@ padding-left: 122px;
 .card-text{
     width: 270px;
 }
+.format h2{
+    color: black;
+    font-family: Roboto Slab;
+    font-size: 55px;
+    font-weight: 700;
+    line-height: 101.385%; 
+    padding-left: 121px;
+    padding-bottom: 89px;
+}
 .sto h2{
  margin-top: 417px;
  color: #000;
@@ -59,8 +64,9 @@ padding-left: 122px;
  height: 374px;
  padding-top: 21px;
  padding-left: 138px;
+ margin-top: 21px;
 }
-@media only screen and (max-width: 834px) {
+@media (min-width: 375px) and (max-width: 833px) {
     .format h2 , .sto h2 {
    font-size: 32px;
     }
@@ -74,7 +80,7 @@ padding-left: 122px;
         font-size: 14px;
     }
   }
-  @media only screen and (max-width: 375px) {
+  @media only screen and (max-width: 374px) {
     .format h2 , .sto h2 {
         font-size: 26px;
         padding:0px;
