--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
-p {
-    color: azure;
-    background-color: brown;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+body {
+    padding: 0;
+    font-family: Roboto;;
+    background-color: #FFF;
 }
+
+h2 {
+    margin: 0 0 95px 37px;
+    padding: 0.3px 0 37.3px ;
+    font-size: 55px;
+    font-weight: 700px;
+    font-family: Roboto Slab;
+}
+
