--- a/style.css
+++ b/style.css
@@ -18,5 +18,28 @@ h2 {
 .programs {
     display: flex;
     flex-wrap: wrap;
-    background-color: brown;
+}
+
+.card {
+    margin: 0 37px 41px 0;
+    border-radius: 30px;
+    box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card-text {
+    padding: 10px 14px 24px 20px;
+}
+
+.card-text .text-title {
+    margin: 0 0 32px;
+    padding: 0;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.card-text .text-description {
+    margin: 0;
+    padding: 0;
+    font-size: 25px;
+    font-weight: 400;
 }
