--- a/index.css
+++ b/index.css
@@ -4,7 +4,6 @@ img{
 .card {
     width: 791px;
 height: 451px;
-    flex-shrink: 0;
     border-radius: 30px;
 background: #FFF;
 box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.25);
@@ -26,7 +25,6 @@ height: 169px;
 .card2-2-1 {
     width: 353px;
 height: 59px;
-flex-shrink: 0;
 color: #000;
 font-family: Roboto Slab;
 font-size: 30px;
@@ -38,12 +36,10 @@ line-height: 101.385%;
     background: url(<path-to-image>), lightgray 50% / cover no-repeat;
     width: 32px;
 height: 31px;
-flex-shrink: 0;
 }
 h1{
     width: 987px;
 height: 93px;
-flex-shrink: 0;
 color: #000;
 font-family: 'Roboto Slab', serif;
 font-size: 55px;
@@ -92,8 +88,44 @@ line-height: 150%; /* 30px */
         height: 17.954px;
         padding-top: 16px;
         padding-left: 16px;
-        
     }
+    
+    @media only screen and (max-width: 374px) {
+        .card {
+            width: 308px;
+            height: 248px;
+            border-radius: 13.979px;
+        }
+        h1 {
+            font-size: 26px;
+        }
+
+        .card p {
+            width: 266px; 
+            height: 111.01px;
+            font-size: 10px;
+            line-height: 150%; 
+        }
+        .card2-1 {
+            width: 80px;
+            height: 84px;
+            padding-left: 20px;
+
+        }
+        .card2-2-1 {
+            font-size: 14px;
+
+        }
+        .fb {
+            width: 14.911px;
+            height: 17.197px;
+            background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+        }
+
+    }
+
+
+
 }
 
 
