Update tablet,mobile version

--- a/gulnar.css
+++ b/gulnar.css
@@ -31,9 +31,6 @@ padding-left: 121px;
     width: 270px;
 }
 
-.container{
- padding-inline: 122 px;
-}
 .card-text{
     width: 270px;
 }
@@ -67,8 +64,10 @@ padding-left: 121px;
  margin-top: 21px;
 }
 @media (min-width: 375px) and (max-width: 833px) {
-    .format h2 , .sto h2 {
+    .format h2  {
    font-size: 32px;
+   padding-left: 70px;
+   padding-bottom: 51.55px;
     }
     .format-card h3{
     font-size: 15px;
@@ -78,12 +77,28 @@ padding-left: 121px;
     }
     .list ul{
         font-size: 14px;
+        padding-top: 12.16px;
+        padding-left: 80px;
+
+    }
+    .format-card{
+        padding-left: 70px;
+        
+    }
+    .sto h2 {
+        font-size: 32px;
+        padding-left: 70px;
+        margin-top: 103.55px;
     }
   }
+
+
+
   @media only screen and (max-width: 374px) {
-    .format h2 , .sto h2 {
+    .format h2 {
         font-size: 26px;
-        padding:0px;
+        padding-left: 36px;
+        padding-bottom: 16.66px;
   }
   .format-card h3{
     font-size: 12px;
@@ -93,5 +108,28 @@ padding-left: 121px;
     }
     .list ul{
         font-size: 5px;
-    } 
+    }
+    .sto h2{
+        font-size: 26px;
+        padding-left: 36px;  
+        margin-top: 73px;
+    }
+    .format-card{
+        padding-left: 35px;
+        padding-bottom: 30px;
+    }
+    .format{
+        display: flex;
+        flex-direction: column;
+    }
+    .format-cards{
+        display: flex;
+        flex-direction: column;
+    }
+   .list ul{
+    padding-top: 5px;
+    padding-left: 44px;
+
+ }
+  
   }  
