--- a/index.css
+++ b/index.css
@@ -1,13 +1,17 @@
 img{
     width: 100%;
 }
+.container {
+    margin-inline: 120px;
+
+}
 .card {
     width: 791px;
 height: 451px;
     border-radius: 30px;
 background: #FFF;
 box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.25);
-padding: 46px;
+padding: 30px;
 }
 .card2-2 {
     width: 190px;
@@ -24,7 +28,6 @@ height: 169px;
 
 .card2-2-1 {
     width: 353px;
-height: 59px;
 color: #000;
 font-family: Roboto Slab;
 font-size: 30px;
@@ -38,14 +41,14 @@ line-height: 101.385%;
 height: 31px;
 }
 h1{
-    width: 987px;
-height: 93px;
+
 color: #000;
 font-family: 'Roboto Slab', serif;
 font-size: 55px;
 font-style: normal;
 font-weight: 700;
 line-height: 101.385%; 
+
 }
 .card p {
     color: #000;
@@ -54,8 +57,9 @@ font-size: 20px;
 font-style: normal;
 font-weight: 400;
 line-height: 150%; /* 30px */
+
 }
-@media only screen and (max-width: 834px) {
+@media (max-width: 834px) and (min-width: 374px) {
     h1 {
         font-size: 32px;
     }
@@ -65,7 +69,6 @@ line-height: 150%; /* 30px */
         border-radius: 17.375px;
         background: #FFF;
         box-shadow: 0.57917px 0.57917px 11.58333px 0px rgba(0, 0, 0, 0.25);
-        padding: 26px;
     }
     .card p{
         font-size: 12px;
@@ -89,8 +92,11 @@ line-height: 150%; /* 30px */
         padding-top: 16px;
         padding-left: 16px;
     }
-    
-    @media only screen and (max-width: 374px) {
+}  
+    @media (max-width: 374px) {
+        .container{
+            margin-inline: 20px;
+        }
         .card {
             width: 308px;
             height: 248px;
@@ -98,13 +104,14 @@ line-height: 150%; /* 30px */
         }
         h1 {
             font-size: 26px;
+            /* padding-left: 20px; */
         }
 
         .card p {
-            width: 266px; 
-            height: 111.01px;
             font-size: 10px;
             line-height: 150%; 
+            padding: ;
+
         }
         .card2-1 {
             width: 80px;
@@ -117,8 +124,8 @@ line-height: 150%; /* 30px */
 
         }
         .fb {
-            width: 14.911px;
-            height: 17.197px;
+            max-width: 14.911px;
+            max-height: 17.197px;
             background: url(<path-to-image>), lightgray 50% / cover no-repeat;
         }
 
@@ -126,6 +133,6 @@ line-height: 150%; /* 30px */
 
 
 
-}
+
 
 
