--- a/style.css
+++ b/style.css
@@ -2,17 +2,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 body {
-    padding: 0;
-    font-family: Roboto;;
+    padding: 85px;
+    font-family: Roboto;
+    ;
     background-color: #FFF;
-}
-
-h2 {
-    margin: 0 0 95px 37px;
-    padding: 0.3px 0 37.3px ;
-    font-size: 55px;
-    font-weight: 700px;
-    font-family: Roboto Slab;
 }
 
 .programs {
@@ -20,26 +13,92 @@ h2 {
     flex-wrap: wrap;
 }
 
-.card {
-    margin: 0 37px 41px 0;
-    border-radius: 30px;
-    box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
+@media (min-width: 1280px) {
+    /* Styles applyed for Desktop version */
+
+    h2 {
+        margin: 0 0 95px 37px;
+        padding: 10px 0 44px 2px;
+        font-size: 55px;
+        font-weight: 700px;
+        font-family: Roboto Slab;
+    }
+
+    .card {
+        margin: 0 37px 41px 0;
+        border-radius: 30px;
+        background: #FFF;
+        box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .card-image img {
+        width: 399px;
+        height: 160px;
+    }
+
+    .card-text {
+        padding: 11px 15px 23px 19px;
+    }
+
+    .card-text .text-title {
+        margin: 0 0 32px;
+        padding: 7.5px 0px 9px 2.5px;
+        font-size: 30px;
+        font-weight: 700;
+    }
+
+    .card-text .text-description {
+        margin: 0;
+        padding: 7.2px 0 6px 1.5px;
+        font-size: 25px;
+        font-weight: 400;
+    }
+
 }
 
-.card-text {
-    padding: 10px 14px 24px 20px;
+@media (min-width: 992px) and (max-width: 1279px) {
+    /* Styles applyed for Tablet version */
+
+    h2 {
+        margin: 0 0 55px 21.3px;
+        padding: 5px 0 26px 1px;
+        font-size: 55px;
+        font-weight: 700px;
+        font-family: Roboto Slab;
+    }
+
+    .card {
+        margin: 0 21.4px 23.75px 0;
+        border-radius: 17.375px;
+        background: #FFF;
+        box-shadow: 0.57917px 0.57917px 8.6875px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .card-image img {
+        width: 231.088px;
+        height: 92.667px;
+    }
+
+    .card-text {
+        padding: 6.37px 8.11px 13.32px 11.5px;
+    }
+
+    .card-text .text-title {
+        margin: 0 0 18.53px;
+        padding: 5px 0px 5.5px 1.5px;
+        font-size: 17px;
+        font-weight: 700;
+    }
+
+    .card-text .text-description {
+        margin: 0;
+        padding: 4px 0 4.5px 1.3px;
+        font-size: 14px;
+        font-weight: 400;
+    }
+
 }
 
-.card-text .text-title {
-    margin: 0 0 32px;
-    padding: 0;
-    font-size: 30px;
-    font-weight: 700;
-}
 
-.card-text .text-description {
-    margin: 0;
-    padding: 0;
-    font-size: 25px;
-    font-weight: 400;
-}
+/* .card-text height: n  flex  flex-direction: column justify-content: space-between 
+.text-title margin-bottom: 0 */
