--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 body {
     padding: 85px;
     font-family: Roboto;
-    ;
     background-color: #FFF;
 }
 
@@ -13,51 +12,55 @@ body {
     flex-wrap: wrap;
 }
 
-@media (min-width: 1280px) {
-    /* Styles applyed for Desktop version */
-
-    h2 {
-        margin: 0 0 95px 37px;
-        padding: 10px 0 44px 2px;
-        font-size: 55px;
-        font-weight: 700px;
-        font-family: Roboto Slab;
-    }
-
-    .card {
-        margin: 0 37px 41px 0;
-        border-radius: 30px;
-        background: #FFF;
-        box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
-    }
-
-    .card-image img {
-        width: 399px;
-        height: 160px;
-    }
-
-    .card-text {
-        padding: 11px 15px 23px 19px;
-    }
-
-    .card-text .text-title {
-        margin: 0 0 32px;
-        padding: 7.5px 0px 9px 2.5px;
-        font-size: 30px;
-        font-weight: 700;
-    }
-
-    .card-text .text-description {
-        margin: 0;
-        padding: 7.2px 0 6px 1.5px;
-        font-size: 25px;
-        font-weight: 400;
-    }
-
+h2 {
+    margin: 0 0 95px 37px;
+    padding: 10px 0 44px 2px;
+    font-size: 3.8vw;
+    font-weight: 700px;
+    font-family: Roboto Slab;
 }
 
-@media (min-width: 992px) and (max-width: 1279px) {
-    /* Styles applyed for Tablet version */
+.card {
+    margin: 0 37px 41px 0;
+    border-radius: 30px;
+    background: #FFF;
+    box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
+}
+
+.card-image {
+    width: 399px;
+    height: 160px;
+}
+
+.card-image img {
+    width: 100%;
+    height: 100%;
+}
+
+.card-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 134px;
+    padding: 11px 15px 23px 19px;
+}
+
+.card-text .text-title {
+    margin: 0;
+    padding: 7.5px 0px 0px;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.card-text .text-description {
+    margin: 0;
+    padding: 0px 0px 1.5px;
+    font-size: 25px;
+    font-weight: 400;
+}
+
+
+/* @media (min-width: 992px) and (max-width: 1279px) {
 
     h2 {
         margin: 0 0 55px 21.3px;
@@ -97,7 +100,7 @@ body {
         font-weight: 400;
     }
 
-}
+} */
 
 
 /* .card-text height: n  flex  flex-direction: column justify-content: space-between 
