--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 body {
-    padding: 85px;
+    padding-left: 84px;
     font-family: Roboto;
     background-color: #FFF;
 }
@@ -13,23 +13,23 @@ body {
 }
 
 h2 {
-    margin: 0 0 95px 37px;
-    padding: 10px 0 44px 2px;
+    margin: 0 0 2em 2.5vw;
+    padding: 10px 0 30px 2px;
     font-size: 3.8vw;
-    font-weight: 700px;
+    font-weight: 700;
     font-family: Roboto Slab;
 }
 
 .card {
-    margin: 0 37px 41px 0;
-    border-radius: 30px;
+    margin: 0 2.57vw 2.85vw 0;
+    border-radius: 2.8vw;
     background: #FFF;
     box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
 }
 
 .card-image {
-    width: 399px;
-    height: 160px;
+    width: 27.7vw;
+    height: 11.11vw;
 }
 
 .card-image img {
@@ -41,21 +41,21 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 134px;
-    padding: 11px 15px 23px 19px;
+    height: 9.31vw;
+    padding: 0.76vw 1.04vw 1.60vw 1.32vw;
 }
 
 .card-text .text-title {
     margin: 0;
-    padding: 7.5px 0px 0px;
-    font-size: 30px;
+    padding: 0.25em 0 0;
+    font-size: 2.08vw;
     font-weight: 700;
 }
 
 .card-text .text-description {
     margin: 0;
-    padding: 0px 0px 1.5px;
-    font-size: 25px;
+    padding: 0 0 0.1em;
+    font-size: 1.74vw;
     font-weight: 400;
 }
 
@@ -66,7 +66,7 @@ h2 {
         margin: 0 0 55px 21.3px;
         padding: 5px 0 26px 1px;
         font-size: 55px;
-        font-weight: 700px;
+        font-weight: 700;
         font-family: Roboto Slab;
     }
 
@@ -101,7 +101,3 @@ h2 {
     }
 
 } */
-
-
-/* .card-text height: n  flex  flex-direction: column justify-content: space-between 
-.text-title margin-bottom: 0 */
