Changed some problems

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
 h1,h2{
     font-family: Roboto Slab;
 }
+
 /* .container{
     margin-inline: 100px;
 } */
@@ -125,8 +126,8 @@ li img{
 .information-course-text h2:hover{
     color: rebeccapurple;
 }
-.information-course-text{
-    max-width: 146vw; /*662px;*/
+.information-course-text {
+    width: 46vw; /*662px;*/
     font-size: 24px;
     line-height: 150%;
 }
@@ -161,13 +162,14 @@ li img{
 }
 
 
+
 /* ********************************  Media Quary   Tablet *********************************** */
 
 
 @media (max-width: 1279px) {
-    .container{
-        margin-inline: 8.4vw;/*70px;*/
-    }
+    /* .container{
+        margin-inline: 8.4vw;70px; */
+    /* } */
     .logo{
         width: 65px;
         height: 38px;
@@ -255,9 +257,9 @@ li img{
 
 
 @media (max-width: 991px) {
-    .container{
+    /* .container{
         margin-inline: 9.33vw;/*35px;*/
-    }
+    /* } */ 
     .logo{
         width: 52.189px;
         height: 30.754px;
