--- a/index.css
+++ b/index.css
@@ -2,11 +2,11 @@ img{
     width: 100%;
 }
 .container {
-    margin-inline: 120px;
+    margin-inline: 8vw;
 
 }
 .card {
-    width: 791px;
+    width: 55vw;
 height: 451px;
     border-radius: 30px;
 background: #FFF;
@@ -14,7 +14,7 @@ box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.25);
 padding: 30px;
 }
 .card2-2 {
-    width: 190px;
+    width: 13vw;
 height: 169px;
 }
 .card2 {
@@ -22,29 +22,29 @@ height: 169px;
 
 }
 .card2-1 {
-    width: 190px;
+    width: 13vw;
     height: 169px;
 }
 
 .card2-2-1 {
-    width: 353px;
+    width: 25vw;
 color: #000;
 font-family: Roboto Slab;
-font-size: 30px;
+font-size: 2vw;
 font-style: normal;
 font-weight: 700;
 line-height: 101.385%; 
 } 
 .fb{
     background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-    width: 32px;
+    width: 2.2vw;
 height: 31px;
 }
 h1{
 
 color: #000;
 font-family: 'Roboto Slab', serif;
-font-size: 55px;
+font-size: 3.8vw;
 font-style: normal;
 font-weight: 700;
 line-height: 101.385%; 
@@ -53,7 +53,7 @@ line-height: 101.385%;
 .card p {
     color: #000;
 font-family: Roboto;
-font-size: 20px;
+font-size: 1.3vw;
 font-style: normal;
 font-weight: 400;
 line-height: 150%; /* 30px */
@@ -61,66 +61,66 @@ line-height: 150%; /* 30px */
 }
 @media (max-width: 834px) and (min-width: 374px) {
     h1 {
-        font-size: 32px;
+        font-size: 3.8vw;
     }
     .card {
-        width: 458.121px;
+        width: 55vw;
         height: 261.204px;
         border-radius: 17.375px;
         background: #FFF;
         box-shadow: 0.57917px 0.57917px 11.58333px 0px rgba(0, 0, 0, 0.25);
     }
     .card p{
-        font-size: 12px;
+        font-size: 1.4vw;
     }
     .card2-2-1 {
-        font-size: 17px;
-        padding-left: 17px;
+        font-size: 2vw;
+        padding-left: 2vw;
         padding-bottom: 0;
         margin-bottom: 0;
         height: auto;
 
     }
     .card2-1{
-        width: 110.042px;
+        width: 13vw;
         height: 97.879px;
         
     }
     .fb {
-        width: 18.533px;
+        width: 2.1vw;
         height: 17.954px;
         padding-top: 16px;
-        padding-left: 16px;
+        padding-left: 1.9vw;
     }
 }  
     @media (max-width: 374px) {
         .container{
-            margin-inline: 20px;
+            margin-inline: 5.3vw;
         }
         .card {
-            width: 308px;
+            width: 82vw;
             height: 248px;
             border-radius: 13.979px;
         }
         h1 {
-            font-size: 26px;
+            font-size: 6.9vw;
             /* padding-left: 20px; */
         }
 
         .card p {
-            font-size: 10px;
+            font-size: 2.6vw;
             line-height: 150%; 
-            padding: ;
+    
 
         }
         .card2-1 {
-            width: 80px;
+            width: 21.3vw;
             height: 84px;
-            padding-left: 20px;
+            padding-left: 5.3vw;
 
         }
         .card2-2-1 {
-            font-size: 14px;
+            font-size: 3.7vw;
 
         }
         .fb {
