--- a/style/style.css
+++ b/style/style.css
@@ -1,291 +1,177 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500&family=Roboto:wght@100;300;400;500;700;900&display=swap');
-
-* {
-    margin: 0;
-    padding: 0;
-
-}
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Slab:wght@700&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
 body {
-    background-color: #fff;
-    width: 100%;
-    height: 100vh;
+    padding: 0;
+    font-family: Roboto;
+    background-color: #FFF;
 }
 
-.icon {
-    width: 112px;
-    height: 66px;
-}
-
-.format-info {
+.programs {
     display: flex;
+    flex-wrap: wrap;
+    margin-left: 5.76vw;
+    margin-bottom: 8.33vw;
 }
 
-
-.what-we-learn h2 {
-    color: #000;
-    font-family: 'Roboto Slab';
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 101.385%; 
-
-}
-
-.list ul{
-    list-style: none;
-        color: #000;
-        font-family: 'Roboto';
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 150%;
-}
-
-.stats {
-    background-color: #EFEFEF;
-    padding-left: 125px;
-    padding-bottom: 110px;
-    padding-top: 100px;
-}
-
-.testing {
-    margin-bottom: 75px;
-}
-.card {
-    width: 791px;
-    height: 350px;
-    flex-shrink: 0;
-    border-radius: 30px;
-    background: #FFF;
-    box-shadow: 1px 1px 20px 0px rgba(0, 0, 0, 0.25);
-    padding: 46px;
-}
-
-
-
-.stats-img {
-    display: flex;
-    padding-top: 50px;
-}
-
-.card2-1 {
-font-family: 'Roboto';
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 150%; 
-}
-
-.card2-2 {
-    padding: 35px;
-}
-
-.card2-2-1 {
-    width: 353px;
-    height: 59px;
-    flex-shrink: 0;
-    color: #000;
-    font-family: 'Roboto Slab';
-    font-size: 30px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 101.385%; 
-} 
-
-.fb {
-    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
-    width: 32px;
-    height: 31px;
-    flex-shrink: 0;
-}
-
-.card p {
-    color: #000;
-    font-family: 'Roboto';
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 150%; /* 30px */
-}
-
-h2 {
-    /* height: 93px; */
-    flex-shrink: 0;
-    color: #000;
-    font-family: 'Roboto Slab', serif;
-    font-size: 55px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 101.385%;
-}
-
-
-
-.start {
-    box-sizing: border-box;
-    background-color: #9DC9C8;
-    padding-top: 180px;
-    padding-left: 122px;
-    /* padding-bottom: 55px;  */
-    height: 780px;
-}
-
-.price-name {
-    color: #000;
-    font-family: 'Roboto';
-    margin-top: 25px;
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 101.385%;
-    
-}
-
-.price {
-    color: #000;
-    font-family: 'Roboto';
-    font-size: 80px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 101.385%; 
-}
-
-.start-info {
-    display: flex;
-    margin-top: 75px;
-}
-
-.start-info1 {
-    margin-right: 70px;
-}
-
-#head {
-    color: #000;
-    font-family: 'Roboto';
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 101.385%;
-    margin-bottom: 9px;
-}
-
-#info {
-    width: 294px;
-    color: #000;
-    font-family: 'Roboto';
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 101.385%;
-}
-
-footer {
-    box-sizing: border-box;
-    background: #000;
-    height: 390px;
-    padding-top: 50px;
-
-}
-
-.wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding-left: 7.62rem;
-    padding-right: 9.13rem;
-}
-
-.icon {
-    display: block;
-}
-
-.social p {
-    color: #FFF;
-    font-family: 'Roboto';
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 101.385%;
-    padding-top: 160px;
-}
-
-.fotka {
-    width: 34px;
-    height: 34px;
-    padding-right: 10px;
-    padding-top: 35px;
-}
-
-.fotka2 {
-    width: 27px;
-    height: 27px;
-}
-
-.fotka3 {
-    width: 27px;
-    height: 18px;
-}
-
-
-.connection {
-    color: white;
-}
-
-.connection img {
-    margin-right: 20px;
-    width: 27px;
-    height: 27px;
-}
-
-.connection p {
-    color: #FFF;
-    font-family: 'Roboto';
-    font-size: 25px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 101.385%;
-}
-
-.test {
-    margin-bottom: 17px;
-}
-
-@media (max-width: 834px) {
-    body {
-
-    }
-    .start {
-        padding-top: 100px;
-        padding-left: 70px;
-        height: 451px;
-    }
-    .start h2 {
-        font-size: 32px;
+@media (min-width: 1280px) {
+    .course-program h2 {
+        margin: 0 0 2em 8.33vw;
+        padding: 10px 0 30px 2px;
+        font-size: 3.82vw;
         font-weight: 700;
+        font-family: Roboto Slab;
     }
-    .price-name {
-        font-size: 14px;
+
+    .card {
+        margin: 0 2.57vw 2.85vw 0;
+        border-radius: 2.5vw;
+        background: #FFF;
+        box-shadow: 1px 1px 15px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .card-image {
+        width: 27.7vw;
+        height: 11.11vw;
+    }
+
+    .card-image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 9.3vw;
+        padding: 0.75vw 1vw 1.6vw 1.3vw;
+    }
+
+    .card-text .text-title {
+        margin: 0;
+        padding: 0.25em 0 0 2px;
+        font-size: 2.08vw;
+        font-weight: 700;
+        line-height: 97%;
+    }
+
+    .card-text .text-description {
+        margin: 0;
+        padding: 0 0 0.1em 2px;
+        font-size: 1.74vw;
         font-weight: 400;
-        margin-top: 30px;
+        line-height: 130%;
     }
-    .price {
-       font-size: 46px;
+}
 
-    }
-    .start-info {
-        margin-top: 50px;
-    }
-    #head {
-        font-size: 14px;
-        margin-bottom: 9px;
-    }
 
-    #info {
-        font-size: 10px;
+@media (min-width: 992px) and (max-width: 1280px) {
+
+    .course-program h2 {
+        margin: 0 0 1.7em 4.86vw;
+        padding: 5px 0 26px 1px;
+        font-size: 3.84vw;
+        font-weight: 700;
+        font-family: Roboto Slab;
     }
 
-    
+    .card {
+        margin: 0 2.58vw 2.8vw 0;
+        border-radius: 2.5vw;
+        background: #FFF;
+        box-shadow: 0.57917px 0.57917px 8.6875px 0px rgba(0, 0, 0, 0.25);
+    }
 
+    .card-image {
+        width: 27.7vw;
+        height: 11.1vw;
+    }
+
+    .card-image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 9.3vw;
+        padding: 0.75vw 1vw 1.6vw 1.3vw;
+    }
+
+    .card-text .text-title {
+        margin: 0;
+        padding: 0.2em 0 0 1.5px;
+        font-size: 2.04vw;
+        font-weight: 700;
+        line-height: 97%;
+    }
+
+    .card-text .text-description {
+        margin: 0;
+        padding: 0 0 0.1em 1.5px;
+        font-size: 1.68vw;
+        font-weight: 400;
+        line-height: 130%;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .course-program h2 {
+        margin: 0 0 9.48vw 9.60vw;
+        padding: 4.5px 0 20.5px 0.5px;
+        font-size: 6.93vw;
+        font-weight: 700;
+        font-family: Roboto Slab;
+    }
+
+    .programs {
+        flex-direction: column;
+        margin: auto;
+        width: 49.5vw;
+    }
+
+    .card {
+        margin: 0 0 6.4vw;
+        border-radius: 3.73vw;
+        background: #FFF;
+        box-shadow: 0.46597px 0.46597px 6.98958px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .card-image {
+        width: 49.5vw;
+        height: 19.85vw;
+    }
+
+    .card-image img {
+        width: 100%;
+        height: 100%;
+    }
+
+    .card-text {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 15.96vw;
+        padding: 1.33vw 1.7vw 2.7vw 2.5vw;
+    }
+
+    .card-text .text-title {
+        margin: 0;
+        padding: 1.1vw 0 0 0.3vw;
+        font-size: 3.73vw;
+        font-weight: 700;
+        line-height: 97%;
+    }
+
+    .card-text .text-description {
+        margin: 0;
+        padding: 0 0 0.35vw 0.3vw;
+        font-size: 3.20vw;
+        font-weight: 400;
+        line-height: 130%;
+    }
 }
